testsuite/tests/typing-modules-bugs/pr9695_bad.compilers.reference
File "pr9695_bad.ml", line 10, characters 18-19:
10 | let () = let open A in x
                       ^
Error: This is an alias for module MissingModule, which is missing
